--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "version": "0.0.1",
   "window": {
     "show": false,
-    "toolbar": false,
-    "frame": false,
+    "toolbar": true,
+    "frame": true,
     "width": 800,
     "height": 600,
     "max_width": 800,
@@ -21,9 +21,10 @@
     "grunt-shell": "^0.7.0"
   },
   "dependencies": {
+    "async": "^0.9.0",
+    "dockerode": "git+https://github.com/usekite/dockerode.git",
     "exec": "^0.1.2",
     "moment": "2.8.1",
-    "open": "0.0.5",
-    "dockerode": "git+https://github.com/usekite/dockerode.git"
+    "open": "0.0.5"
   }
 }
