More responsive messages when pulling Docker images.

--- a/meteor/.jshintrc
+++ b/meteor/.jshintrc
@@ -186,6 +186,7 @@
       "getBinDir": true,
       "isVirtualBoxInstalled": true,
       "openVirtualBoxInstaller": true,
+      "pullImageFromDockerfile": true,
 
       // Forms
       "showFormErrors": true,
